k8s/tribe-k8s.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tribe
  labels:
    app: tribe
spec:
  replicas: 3
  selector:
    matchLabels:
      app: tribe
  template:
    metadata:
      labels:
        app: tribe
    spec:
      containers:
        - name: tribe
          image: omarhosny102/tribe:latest
          ports:
            - containerPort: 8080
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1

---
apiVersion: v1
kind: Service
metadata:
  name: tribe-service
  labels:
    app: tribe
spec:
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
      nodePort: 30016
  selector:
    app: tribe
  type: LoadBalancer
